--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
 		<div class="portfolio_strict row">
 			<div class="col-xs-6 col-sm-2 col-md-2 col-lg-2">
 				<div class="portfolio_item wow animated flipInX">
-					<!--<a target="_blank" href="http://digitall.company/" data-path-hover="M 180,190 0,158 0,0 180,0 z">-->
+					<a target="_blank" href="http://digitall.company/" >
 					<figure style="background:url(images/digitall.jpg) no-repeat center;height: 130px;background-size: 100% 100%;">
 
 					</figure>
-				<!--</a>-->
+				</a>
 					<div class="portfolio_description">
 						<h3>DigitAll</h3>
 						<p>Consultoría de marketing y comunicación
@@ -257,123 +257,150 @@
 <section class="portfolio_teasers_wrapper services" style="padding-bottom: 7%;"  id="client">
 	<div class="container">
 		<h1 class="section_header fancy centered" style="color: #008ed6;">Nuestros Clientes</h1>
-		<div class="portfolio_strict row">
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/ablpharma.jpg" alt="client logo 1">
+		<div class="row row-centered">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/ablpharma.jpg" class="grayscale" alt="client logo 1">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/andromaco.jpg" alt="client logo 2">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/andromaco.jpg" class="grayscale" alt="client logo 2">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/babylee.jpg" alt="client logo 3">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/babylee.jpg" class="grayscale" alt="client logo 3">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/ballerina.jpg" alt="client logo 4">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/ballerina.jpg" class="grayscale" alt="client logo 4">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/benetton.gif" alt="client logo 5">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/benetton.jpg" class="grayscale" alt="client logo 5">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/bercia.jpg" alt="client logo 6">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/bercia.jpg" class="grayscale" alt="client logo 6">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/cat.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/cat.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/ccdm.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/ccdm.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/chevrolet.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/chevrolet.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/chv.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/chv.jpg" class="grayscale" alt="client logo 7">
 		    </div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/costa.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/costa.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/cuponatic.png" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/cuponatic.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/cushe.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/cushe.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/defontana.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/defontana.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/everlast.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/everlast.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/fuzol.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/fuzol.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/gamalate.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/gamalate.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/genacol.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/genacol.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/gob_chile.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/gob_chile.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/hellmans.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/hellmans.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/herbalessence.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/herbalessence.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/hmc.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/hmc.jpg" class="grayscale" alt="client logo 7">
 		    </div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/ipchile.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/ipchile.jpg" class="grayscale" alt="client logo 7">
 		    </div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/kia.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/kia.jpg" class="grayscale" alt="client logo 7">
 		    </div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/kryzpo.png" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/kryzpo.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/levis.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/levis.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/loreal_logo.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/loreal_logo.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/p&g.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/p&g.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/pepsi.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/pepsi.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/portaldelseguro.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/portaldelseguro.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/rayfilter.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/rayfilter.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/shopbop.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/shopbop.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/sony.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/sony.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/stabilo.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/stabilo.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/suzuki.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/suzuki.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/ufo.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/ufo.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/unilever.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/unilever.jpg"  class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/vichy.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/vichy.jpg" class="grayscale" alt="client logo 7">
 			</div>
-			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1">
-				<img src="images/clients/wb.jpg" alt="client logo 7">
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/wb.jpg" class="grayscale" alt="client logo 7">
+			</div>
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/bci.png" class="grayscale img-clients" alt="client logo 7">
+			</div>
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/easton%20mall.png" class="grayscale img-clients" alt="client logo 7">
+			</div>
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/Nuevo_logo_emm.jpg" class="grayscale img-clients" alt="client logo 7">
+			</div>
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/atton-footerlogo.png" class="grayscale img-clients" alt="client logo 7">
+			</div>
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/cirumed.png" class="grayscale img-clients" alt="client logo 7">
+			</div>
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/gabriela+mistral.jpg" class="grayscale img-clients" alt="client logo 7">
+			</div>
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/montes-logo.jpg" class="grayscale img-clients" alt="client logo 7">
+			</div>
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/azaleia.jpg" class="grayscale img-clients" alt="client logo 7">
+			</div>
+			<div class="col-xs-3 col-sm-2 col-md-1 col-lg-1 col-centered">
+				<img src="images/clients/nine-west-logo.jpg" class="grayscale img-clients" alt="client logo 7">
 			</div>
 		</div>
 	</div>
